--- a/backend/package.json
+++ b/backend/package.json
@@ -16,10 +16,12 @@
     "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules src/server.ts"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "shortid": "^2.2.16"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
+    "@types/shortid": "^0.0.29",
     "@typescript-eslint/eslint-plugin": "^4.14.0",
     "@typescript-eslint/parser": "^4.14.0",
     "eslint": "^7.18.0",
