--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "date-fns": "^2.16.1",
     "express": "^4.17.1",
-    "shortid": "^2.2.16"
+    "mysql": "^2.18.1",
+    "shortid": "^2.2.16",
+    "typeorm": "^0.2.30"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
