--- a/backend/ormconfig.json
+++ b/backend/ormconfig.json
@@ -4,5 +4,9 @@
   "port": 3306,
   "username": "root",
   "password": "",
-  "database": "gobarber"
+  "database": "gobarber",
+  "migrations": [ "./src/database/migrations/*.ts" ],
+  "cli": {
+    "migrationsDir": "./src/database/migrations"
+  }
 }
