--- a/backend/ormconfig.json
+++ b/backend/ormconfig.json
@@ -5,6 +5,7 @@
   "username": "root",
   "password": "",
   "database": "gobarber",
+  "entities": [ "./src/models/*.ts" ],
   "migrations": [ "./src/database/migrations/*.ts" ],
   "cli": {
     "migrationsDir": "./src/database/migrations"
