--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
     "date-fns": "^2.16.1",
     "express": "^4.17.1",
     "mysql": "^2.18.1",
+    "reflect-metadata": "^0.1.13",
     "shortid": "^2.2.16",
     "typeorm": "^0.2.30"
   },
