--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,7 @@
     "cli": "ts-node-dev ./node_modules/typeorm/cli.js"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "date-fns": "^2.16.1",
     "express": "^4.17.1",
     "mysql": "^2.18.1",
@@ -17,6 +18,7 @@
     "typeorm": "^0.2.30"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.11",
     "@types/shortid": "^0.0.29",
     "@typescript-eslint/eslint-plugin": "^4.14.0",
