--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "mysql": "^2.18.1",
     "reflect-metadata": "^0.1.13",
     "shortid": "^2.2.16",
+    "tsyringe": "^4.4.0",
     "typeorm": "^0.2.30"
   },
   "devDependencies": {
