--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,9 @@
 !.vscode/extensions.json
 node_modules
 
+annotationsBackend.md
+annotationsFrontend.md
+annotationsMobile.md
+
 backend/tmp/*
 !backend/tmp/.gitkeep
