--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,4 +1,6 @@
 {
+  "include": ["./src/**/*"],
+  "exclude": ["node_modules"],
   "compilerOptions": {
     /* Visit https://aka.ms/tsconfig.json to read more about this file */
 
@@ -68,8 +70,5 @@
     /* Advanced Options */
     "skipLibCheck": true,                     /* Skip type checking of declaration files. */
     "forceConsistentCasingInFileNames": true  /* Disallow inconsistently-cased references to the same file. */
-  },
-  "exclude": [
-    "node_modules"
-  ]
+  }
 }
