--- a/backend/package.json
+++ b/backend/package.json
@@ -31,6 +31,7 @@
     "@types/handlebars": "^4.1.0",
     "@types/jest": "^26.0.20",
     "@types/jsonwebtoken": "^8.5.0",
+    "@types/mongodb": "^3.6.3",
     "@types/multer": "^1.4.5",
     "@types/nodemailer": "^6.4.0",
     "@types/shortid": "^0.0.29",
