Using env variables

--- a/.gitignore
+++ b/.gitignore
@@ -13,5 +13,5 @@ annotationsMobile.md
 backend/.env
 backend/ormconfig.json
 backend/tmp/*
-!backend/tmp/base.css
+!backend/tmp/uploads/base.css
 backend/*.lock
