--- a/backend/package.json
+++ b/backend/package.json
@@ -29,6 +29,7 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.11",
     "@types/handlebars": "^4.1.0",
     "@types/hapi__joi": "^17.1.6",
