--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
     "t": "jest"
   },
   "dependencies": {
+    "aws-sdk": "^2.841.0",
     "bcryptjs": "^2.4.3",
     "celebrate": "^13.0.4",
     "date-fns": "^2.16.1",
