--- a/backend/.env.example
+++ b/backend/.env.example
@@ -4,8 +4,13 @@ APP_SECRET=
 APP_WEB_URL=http://localhost:3000
 APP_API_URL=http://localhost:3333
 
-MAIL_DRIVER=ethereal
-
+# AWS Credentials
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 
+# Storage
+STORAGE_DRIVER=disk | s3
+STORAGE_BUCKET=nome do bucket (caso s3)
+
+# Mail
+MAIL_DRIVER=ethereal | ses
