--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "express-async-errors": "^3.1.1",
     "handlebars": "^4.7.6",
     "jsonwebtoken": "^8.5.1",
+    "mime-types": "^2.1.28",
     "mongodb": "^3.6.3",
     "multer": "^1.4.2",
     "mysql": "^2.18.1",
@@ -36,6 +37,7 @@
     "@types/hapi__joi": "^17.1.6",
     "@types/jest": "^26.0.20",
     "@types/jsonwebtoken": "^8.5.0",
+    "@types/mime-types": "^2.1.0",
     "@types/mongodb": "^3.6.3",
     "@types/multer": "^1.4.5",
     "@types/nodemailer": "^6.4.0",
