--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "handlebars": "^4.7.6",
+    "ioredis": "^4.22.0",
     "jsonwebtoken": "^8.5.1",
     "mime-types": "^2.1.28",
     "mongodb": "^3.6.3",
@@ -35,6 +36,7 @@
     "@types/express": "^4.17.11",
     "@types/handlebars": "^4.1.0",
     "@types/hapi__joi": "^17.1.6",
+    "@types/ioredis": "^4.19.3",
     "@types/jest": "^26.0.20",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/mime-types": "^2.1.0",
