Rate limiter - DDoS prevent

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -14,3 +14,8 @@ STORAGE_BUCKET=nome do bucket (caso s3)
 
 # Mail
 MAIL_DRIVER=ethereal | ses
+
+# Redis
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_PASS=
