--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,8 @@
     "mongodb": "^3.6.3",
     "multer": "^1.4.2",
     "mysql": "^2.18.1",
+    "rate-limiter-flexible": "^2.2.1",
+    "redis": "^3.0.2",
     "reflect-metadata": "^0.1.13",
     "shortid": "^2.2.16",
     "tsyringe": "^4.4.0",
@@ -43,6 +45,7 @@
     "@types/mongodb": "^3.6.3",
     "@types/multer": "^1.4.5",
     "@types/nodemailer": "^6.4.0",
+    "@types/redis": "^2.8.28",
     "@types/shortid": "^0.0.29",
     "@typescript-eslint/eslint-plugin": "^4.14.0",
     "@typescript-eslint/parser": "^4.14.0",
