--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "aws-sdk": "^2.841.0",
     "bcryptjs": "^2.4.3",
     "celebrate": "^13.0.4",
+    "cors": "^2.8.5",
     "date-fns": "^2.16.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
@@ -34,6 +35,7 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
+    "@types/cors": "^2.8.9",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.11",
     "@types/handlebars": "^4.1.0",
