--- a/web/package.json
+++ b/web/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^17.0.0",
     "@unform/core": "^2.1.5",
     "@unform/web": "^2.1.5",
+    "axios": "^0.21.1",
     "polished": "^4.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -41,6 +42,7 @@
     ]
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/styled-components": "^5.1.7",
     "@types/yup": "^0.29.11",
     "@typescript-eslint/eslint-plugin": "^4.15.0",
