--- a/web/package.json
+++ b/web/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^17.0.1",
     "react-icons": "^4.2.0",
     "react-scripts": "4.0.2",
+    "shortid": "^2.2.16",
     "styled-components": "^5.2.1",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1",
@@ -43,6 +44,7 @@
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
+    "@types/shortid": "^0.0.29",
     "@types/styled-components": "^5.1.7",
     "@types/yup": "^0.29.11",
     "@typescript-eslint/eslint-plugin": "^4.15.0",
