--- a/web/package.json
+++ b/web/package.json
@@ -17,6 +17,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-icons": "^4.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
     "react-spring": "^8.0.27",
     "shortid": "^2.2.16",
@@ -45,6 +46,7 @@
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
+    "@types/react-router-dom": "^5.1.7",
     "@types/shortid": "^0.0.29",
     "@types/styled-components": "^5.1.7",
     "@types/yup": "^0.29.11",
