Conditioned Routes, SignIn and SignOut ok

--- a/web/.eslintrc.json
+++ b/web/.eslintrc.json
@@ -23,6 +23,7 @@
     ],
     "rules": {
       "comma-dangle": ["error", "only-multiline"],
+      "multiline-ternary": "off",
       "space-before-function-paren": [2, { "anonymous": "always", "named": "never" }],
       "react-hooks/rules-of-hooks": "error",
       "react-hooks/exhaustive-deps": "warn",
