--- a/web/package.json
+++ b/web/package.json
@@ -27,7 +27,7 @@
     "yup": "0.30.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "s": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
