--- a/mobile/ios/Podfile
+++ b/mobile/ios/Podfile
@@ -8,6 +8,8 @@ target 'gobarber' do
 
   use_react_native!(:path => config["reactNativePath"])
 
+  pod 'RNCAsyncStorage', :path => '../node_modules/@react-native-async-storage/async-storage'
+
   target 'gobarberTests' do
     inherit! :complete
     # Pods for testing
