--- a/mobile/ios/Podfile
+++ b/mobile/ios/Podfile
@@ -10,6 +10,8 @@ target 'gobarber' do
 
   pod 'RNCAsyncStorage', :path => '../node_modules/@react-native-async-storage/async-storage'
 
+  pod 'react-native-image-picker', :path => '../node_modules/react-native-image-picker'
+
   target 'gobarberTests' do
     inherit! :complete
     # Pods for testing
