--- a/mobile/android/build.gradle
+++ b/mobile/android/build.gradle
@@ -3,16 +3,17 @@
 buildscript {
     ext {
         buildToolsVersion = "29.0.2"
-        minSdkVersion = 21
+        minSdkVersion = 23
         compileSdkVersion = 29
         targetSdkVersion = 29
+        ndkVersion = "21.3.6528147"
     }
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath("com.android.tools.build:gradle:3.5.3")
+        classpath("com.android.tools.build:gradle:4.0.1")
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -33,5 +34,6 @@ allprojects {
         google()
         jcenter()
         maven { url 'https://www.jitpack.io' }
+        maven { url 'https://maven.google.com' }
     }
 }
