--- a/mobile/ios/gobarber/Info.plist
+++ b/mobile/ios/gobarber/Info.plist
@@ -2,6 +2,12 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+  <key>NSLocationWhenInUseUsageDescription</key>
+	<string/>
+	<key>NSCameraUsageDescription</key>
+	<string>Premitir o app acessar minha câmera</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Premitir o app acessar minhas fotos</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
